--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--https://chrome.google.com/webstore/detail/allow-control-allow-origi/nlfbmbojpeacfghkpbjhddihlkkiljbi?hl=en-->
 <html>
  <head>
   <title>Lyric Generator</title>
@@ -21,7 +22,8 @@
             <div id="results" class="hidden">
                 <h4>{{title}}</h4>
                 <h5>{{artist}}</h5>
-                {{lyrics}}
+                {{lyrics}}<br>
+                <h5><a ng-href="{{url}}">{{url}}</a></h5>
                 
             </div>
                 
